# AIForMath

./: .gitignore  LeanEvalProject.lean  Main.lean  MiniF2F_Highschool.lean  README.md  convert_lean4_qa_to_messages.py  evaluate_lean_passk.py  extract_lean4_qa.py  generate_zero_shot_proofs.py  lake-manifest.json  lakefile.lean  lakefile.toml  lean4_qa_complete_messages_valid.jsonl  main.py  prepare_lean4_experiment_data.py  pyproject.toml  split_lean4_messages.py  test_model.py
Deepseek_highschool_data/: manifest.json
LeanEvalProject/: Basic.lean
MiniF2F_Highschool/: Test.lean  Valid.lean
evaluation/: bfs_tactic_search.py  evaluate_lean_proofs.py  evaluate_minif2f_bfs.py  evaluate_minif2f_highschool_beam_vllm.py  evaluate_minif2f_sampling.py  evaluate_tactic_execution.py  evaluate_tactic_passk_dojo.py  evaluate_tactic_predictions.py  smoke_tactic_accuracy.py
formal_results_storage/: minif2f_highschool_beam_vllm.test_full.summary.json  minif2f_highschool_beam_vllm_new_para1.summary.json  minif2f_highschool_beam_vllm_new_para2.summary.json  test_two_gpu_full.minif2f_highschool.summary.json  test_two_gpu_full.summary.json
runs/: smoke_eval_predictions.jsonl  smoke_eval_results.jsonl  smoke_eval_results.summary.json  zero_shot_smoke.jsonl  zero_shot_test_pass1.jsonl
scripts/: create_highschool_algebra_subset.py  export_deepspeed_checkpoint.py  flatten_tactic_data_to_jsonl.py  run_deepseek_prover_with_vllm.sh  run_deepseekprover_v2_tactic_training.sh  run_evaluate_tactic_passk_dojo.sh  run_medium_tactic_smoke_eval.sh  run_tactic_training_detached.sh  (+3 more)
tui/: app.py  (+4 more)
(+196 files in other folders)
